--- a/31/template.html
+++ b/31/template.html
@@ -28,6 +28,9 @@
   <meta property="og:site_name" content="Test"/>
   <meta property="og:type" content="website"/>
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -37,9 +40,257 @@
 
 <body>
 
+<div id="layout-container">
+
+  <main class="main-content">
+
+    <header class="header">
+      <svg width="0" height="0">
+        <clipPath id="myPath" clipPathUnits="objectBoundingBox">
+          <path d="M0,0 0,0 0,1 0.8,1 1,0.8 1,0 Z"/>
+        </clipPath>
+      </svg>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="navbar navbar-expand-sm">
+              <a class="navbar-brand" href="#">
+                <img src="../31/dist/img/logo.svg" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">About us
+                      <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Our Values</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="home-banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-4 col-md-6">
+            <div class="home-banner__cta">
+              <h1 class="home-banner__cta--title">
+                Online business is fun and easy with us
+              </h1>
+              <a href="#" class="main-btn" data-toggle="modal" data-target="#exampleModalCenter">Get in touch</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-5">
+            <div class="about__content">
+              <h2 class="title">About Us</h2>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet varius magna ullamcorper id vel consectetur eget. Enim nulla ut feugiat lectus lacus tincidunt arcu sed nunc. Fringilla nulla venenatis tellus, at aliquam molestie nulla et. Mi, felis pellentesque arcu aliquam. Egestas ipsum enim, tellus rhoncus, lobortis massa at eget.</p>
+              <p class="description">Odio ut tellus sollicitudin a nam ante nisl. Tempor viverra facilisis sed massa mi, faucibus. Vel ultrices at nisi, ultricies massa sit proin amet.
+                Eget enim suscipit malesuada volutpat in. Risus vitae felis nec quam faucibus. Pretium gravida viverra convallis purus posuere pharetra, tortor adipiscing risus. At vitae vitae pharetra sit risus facilisi faucibus rhoncus. In placerat non sodales egestas a vulputate iaculis purus laoreet. Potenti.</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-7">
+            <div class="about__stats">
+              <div class="about__stats--item">
+                <div class="stat-num">
+                  95%
+                </div>
+                <span class="stat-desc">
+                  Index 1
+                </span>
+              </div>
+              <div class="about__stats--item">
+                <div class="stat-num">
+                  93%
+                </div>
+                <span class="stat-desc">
+                  Index 2
+                </span>
+              </div>
+              <div class="about__stats--item">
+                <div class="stat-num">
+                  94%
+                </div>
+                <span class="stat-desc">
+                  Index 3
+                </span>
+              </div>
+              <div class="about__stats--item">
+                <div class="stat-num">
+                  99%
+                </div>
+                <span class="stat-desc">
+                  Index 4
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="position">
+        About Us
+      </div>
+    </section>
+
+    <section class="values">
+      <div class="position left-pos">
+        Our Values
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="title">Our Values</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="values__content">
+            <div class="values__content--center text-center">
+              <img src="../31/dist/img/shield.svg" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra turpis fermentum faucibus adipiscing nunc rhoncus. Nullam vitae ridiculus sed eu leo. Condimentum sit urna arcu ac, ut faucibus nulla ullamcorper vulputate. Habitant luctus cursus maecenas ut. Arcu.</p>
+            </div>
+            <div class="values__content--item">
+              <h3 class="title">Ante morbi aenean elementum arcu.</h3>
+              <img src="../31/dist/img/shield.svg" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra turpis fermentum faucibus adipiscing nunc rhoncus. Nullam vitae ridiculus sed eu leo. Condimentum sit urna arcu ac, ut faucibus nulla ullamcorper vulputate. Habitant luctus cursus maecenas ut. Arcu.</p>
+            </div>
+            <div class="values__content--item">
+              <h3 class="title">Id elementum.</h3>
+              <img src="../31/dist/img/shield.svg" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum lacus morbi tristique tellus sagittis, hac orci arcu. In aliquet urna, ipsum, tempor. At congue risus pharetra lobortis euismod non, quam enim. Proin vel tempus lobortis platea. Bibendum.</p>
+            </div>
+            <div class="values__content--item">
+              <h3 class="title">Massa vestibulum.</h3>
+              <img src="../31/dist/img/shield.svg" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris bibendum odio a adipiscing bibendum amet. Risus, nulla sem at amet ac nulla. Eu in auctor id lectus. Sem egestas cras blandit amet in. Bibendum mi odio id ut non. Tincidunt arcu et a placerat.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="title">Services</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <div class="box">
+              <div class="services__item">
+                <h3 class="title">Service 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt tincidunt magna velit fringilla. Suspendisse cras magna quis mi, senectus sapien interdum pharetra. Quis interdum volutpat arcu congue massa ipsum volutpat.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="box">
+              <div class="services__item">
+                <h3 class="title">Service 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat at nunc congue eget libero arcu sed enim. Malesuada lorem sed mattis lacus, massa in. Nulla libero et maecenas sed eget integer consectetur. Est massa tincidunt in.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="box">
+              <div class="services__item">
+                <h3 class="title">Service 3</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim dignissim tincidunt ultrices et suscipit. Dictum eu sit in massa praesent ac etiam congue. Morbi donec sapien blandit dolor risus.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="position">
+        Services
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="title">Contacts</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 text-center">
+            <p class="copyright">Some address, country,city, etc</p>
+            <div>
+              <a href="mailto:office@contacts.com" class="mail">office@contacts.com</a>
+            </div>
+            <div>
+              <a href="#" class="main-btn btn-green" data-toggle="modal" data-target="#exampleModalCenter">Get in touch</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  </main>
+
+  <aside class="sidebar">
+    <span class="cta" data-toggle="modal" data-target="#exampleModalCenter">Get in touch</span>
+  </aside>
+
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form method="post" action="handler.php">
+
+            <div class="field">
+              <input type="text" id="name" name="name" placeholder="Name">
+            </div>
+
+            <div class="field">
+              <input type="text" id="email" name="email" placeholder="E-mail">
+            </div>
+
+            <div class="field">
+              <textarea id="subject" name="message" style="height:70px" placeholder="Message"></textarea>
+            </div>
+
+            <input  type="submit" name="submit" value="Contact us">
+
+          </form>
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
 <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/additional-methods.min.js"></script>
 <script src="../31/dist/js/app.min.js"></script>
